--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -5,6 +5,8 @@
     <attr name="listItemBackground" format="color" />
     <attr name="listDividerBackground" format="color" />
     <attr name="windowBackground" format="color" />
+    <attr name="windowBackgroundInverse" format="color" />
+    <attr name="textColorInverse" format="color" />
     <attr name="vertical_spacimg_tr_list" format="dimension" />
     <attr name="vertical_spacimg_tr_list_half" format="dimension" />
 </resources>
