--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -56,5 +56,8 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <!--<dimen name="text_size_giant">17sp</dimen>-->
     <!--<dimen name="text_size_calculator">20sp</dimen>-->
 
+    <!--<dimen name="offset">55dp</dimen>-->
+    <!--<dimen name="standard_100">100dp</dimen>-->
+    <!--<dimen name="standard_145">145dp</dimen>-->
 
 </resources>
